// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CopyPullSecret /> with error link-inplace should render 1`] = `
<CopyPullSecret
  setPageMetadata={[MockFunction]}
  text="Copy pull secret"
  token={
    Object {
      "error": "my error",
    }
  }
  track={[Function]}
  variant="link-inplace"
/>
`;

exports[`<CopyPullSecret /> with error link-tooltip should render 1`] = `
<CopyPullSecret
  setPageMetadata={[MockFunction]}
  text="Copy pull secret"
  token={
    Object {
      "error": "my error",
    }
  }
  track={[Function]}
  variant="link-tooltip"
/>
`;

exports[`<CopyPullSecret /> with token link-inplace should render 1`] = `
<CopyPullSecret
  setPageMetadata={[MockFunction]}
  text="Copy pull secret"
  token={
    Object {
      "auths": Object {
        "foo": "bar",
      },
    }
  }
  track={[Function]}
  variant="link-inplace"
/>
`;

exports[`<CopyPullSecret /> with token link-tooltip should render 1`] = `
<CopyPullSecret
  setPageMetadata={[MockFunction]}
  text="Copy pull secret"
  token={
    Object {
      "auths": Object {
        "foo": "bar",
      },
    }
  }
  track={[Function]}
  variant="link-tooltip"
/>
`;
